--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <title>AirBnB clone</title>
-    <link rel="stylesheet" href="styles/3-common.css">
-    <link rel="stylesheet" href="styles/3-header.css">
-    <link rel="stylesheet" href="styles/3-footer.css">
-    <link rel="icon" href="images/icon.png">
-</head>
-<body>
+  <head>
+    <link rel="stylesheet" type="text/css" href="styles/3-common.css">
+    <link rel="stylesheet" type="text/css" href="styles/3-header.css">
+    <link rel="stylesheet" type="text/css" href="styles/3-footer.css">
+    <link rel="icon" href="images/icon.png" />
+    <title>HBnB</title>
+  </head>
+  <body>
     <header>
-        <div class="logo"></div>
+      <div class="logo"></div>
     </header>
     <footer>
-        <p class="text">Holberton School</p>
+      <p>Holberton School</p>
     </footer>
-</body>
+  </body>
 </html>
