--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -1,39 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <title>AirBnB clone</title>
     <style>
-      body {
-      margin: 0;
-      padding: 0;
-      }
-      header {
-      background: #FF0000;
-      height: 70px;
-      width: 100%;
-      }
-      footer {
-      position: fixed;
-      background: #00FF00;
-      height: 60px;
-      width: 100%;
-      bottom: 0;
-      }
-      footer p {
-      position: absolute;
-      text-align: center;
-      top: 10%;
-      bottom: 0;
-      right: 0;
-      left: 0;
-      }
+        body{
+            margin: 0px;
+            padding: 0px
+        }
+        header{
+            background-color: red;
+            height: 70px;
+            width: 100%
+        }
+        footer{
+            background-color: #00ff00;
+            height: 60px; width: 100%;
+            position:absolute;
+            bottom: 0
+        }
+        p {
+            text-align: center
+        }
     </style>
-    <title>HBnB</title>
-  </head>
-  <body>
-      <header>
-      </header>
-      <footer>
-	<p>Holberton School</p>
-      </footer>
-  </body>
+</head>
+<body>
+    <header>
+    </header>
+    <footer>
+        <p>Holberton School</p>
+    </footer>
+</body>
 </html>
