--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>HBnB</title>
-    <link rel="stylesheet" type="text/css" href="styles/2-common.css">
-    <link rel="stylesheet" type="text/css" href="styles/2-header.css">
-    <link rel="stylesheet" type="text/css" href="styles/2-footer.css">
-  </head>
-  <body>
-      <header>
-      </header>
-      <footer>
-	<p>Holberton School</p>
-      </footer>
-  </body>
+<head>
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <title>AirBnB clone</title>
+    <link rel="stylesheet" href="styles/2-common.css">
+    <link rel="stylesheet" href="styles/2-footer.css">
+    <link rel="stylesheet" href="styles/2-header.css">
+</head>
+<body>
+    <header>
+    </header>
+    <footer>
+        <p>Holberton School</p>
+    </footer>
+</body>
 </html>
