--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="stylesheet" type="text/css" href="styles/4-common.css">
-    <link rel="stylesheet" type="text/css" href="styles/3-header.css">
-    <link rel="stylesheet" type="text/css" href="styles/3-footer.css">
-    <link rel="stylesheet" type="text/css" href="styles/4-filters.css">
-    <link rel="icon" href="images/icon.png" />
-    <title>HBnB</title>
-  </head>
-  <body>
+<head>
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <title>AirBnB clone</title>
+    <link rel="stylesheet" href="styles/4-common.css">
+    <link rel="stylesheet" href="styles/3-header.css">
+    <link rel="stylesheet" href="styles/3-footer.css">
+    <link rel="stylesheet" href="styles/4-filters.css">
+    <link rel="icon" href="images/icon.png">
+</head>
+<body>
     <header>
-      <div class="logo"></div>
+        <div class="logo"></div>
     </header>
     <div class="container">
-      <section class="filters">
-	<button type="button">Search</button>
-      </section>
+        <section class="filters">
+            <button>
+                Search
+            </button>
+        </section>
     </div>
     <footer>
-      <p>Holberton School</p>
+        <p class="text">Holberton School</p>
     </footer>
-  </body>
+</body>
 </html>
