--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -1,32 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="stylesheet" type="text/css" href="styles/4-common.css">
-    <link rel="stylesheet" type="text/css" href="styles/3-header.css">
-    <link rel="stylesheet" type="text/css" href="styles/3-footer.css">
-    <link rel="stylesheet" type="text/css" href="styles/5-filters.css">
-    <link rel="icon" href="images/icon.png" />
-    <title>HBnB</title>
-  </head>
-  <body>
+<head>
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <title>AirBnB clone</title>
+    <link rel="stylesheet" href="styles/4-common.css">
+    <link rel="stylesheet" href="styles/3-header.css">
+    <link rel="stylesheet" href="styles/3-footer.css">
+    <link rel="stylesheet" href="styles/5-filters.css">
+    <link rel="icon" href="images/icon.png">
+</head>
+<body>
     <header>
-      <div class="logo"></div>
+        <div class="logo"></div>
     </header>
     <div class="container">
-      <section class="filters">
-	<button type="button">Search</button>
-	<div class="locations">
-	  <h3>States</h3>
-	  <h4>California, Arizona...</h4>
-	</div>
-	<div class="amenities">
-	  <h3>Amenities</h3>
-	  <h4>Internet, Kitchen...</h4>
-	</div>
-      </section>
+        <section class="filters">
+            <button>
+                Search
+            </button>
+            <div class="locations">
+                <h3>States</h3>
+                <h4>California, Florida...</h4>
+            </div>
+            <div class="amenities">
+                <h3>Amenities</h3>
+                <h4>Internet, Kitchen...</h4>
+            </div>
+        </section>
     </div>
     <footer>
-      <p>Holberton School</p>
+        <p class="text">Holberton School</p>
     </footer>
-  </body>
+</body>
 </html>
