--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -1,58 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="stylesheet" type="text/css" href="styles/4-common.css">
-    <link rel="stylesheet" type="text/css" href="styles/3-header.css">
-    <link rel="stylesheet" type="text/css" href="styles/3-footer.css">
-    <link rel="stylesheet" type="text/css" href="styles/6-filters.css">
-    <link rel="icon" href="images/icon.png" />
-    <title>HBnB</title>
-  </head>
-  <body>
+<head>
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <title>AirBnB clone</title>
+    <link rel="stylesheet" href="styles/4-common.css">
+    <link rel="stylesheet" href="styles/3-header.css">
+    <link rel="stylesheet" href="styles/3-footer.css">
+    <link rel="stylesheet" href="styles/6-filters.css">
+    <link rel="icon" href="images/icon.png">
+</head>
+<body>
     <header>
-      <div class="logo"></div>
+        <div class="logo"></div>
     </header>
     <div class="container">
-      <section class="filters">
-	<div class="locations">
-	  <h3>States</h3>
-	  <h4>California, Arizona</h4>
-	  <div class="popover">
-	    <ul>
-	      <li>
-		<h2>Arizona:</h2>
-		<ul>
-		  <li>Pheonix</li>
-		  <li>Sedona</li>
-		</ul>
-	      </li>
-	      <li>
-		<h2>California:</h2>
-		<ul>
-		  <li>LA</li>
-		  <li>SF</li>
-		</ul>
-	      </li>
-	    </ul>
-	  </div>
-	</div>
-	<div class="amenities">
-	  <h3>Amenities</h3>
-	  <h4>Internet, Kitchen</h4>
-	  <div class="popover">
-	    <ul>
-	      <li>Internet</li>
-	      <li>TV</li>
-	      <li>Kitchen</li>
-	      <li>Iron</li>
-	    </ul>
-	  </div>
-	</div>
-	<button type="button">Search</button>
-      </section>
+        <section class="filters">
+            <button>
+                Search
+            </button>
+            <div class="locations">
+                <h3>States</h3>
+                <h4>California, Florida...</h4>
+                <ul class="popover">
+                    <li><h2>Florida:</h2></li>
+                    <li>Miami</li>
+                    <li>Orlando</li>
+                    <li><h2>California:</h2></li>
+                    <li>San Francisco</li>
+                </ul>
+            </div>
+            <div class="amenities">
+                <h3>Amenities</h3>
+                <h4>Internet, Kitchen...</h4>
+                <ul class="popover">
+                    <li>Tv</li>
+                    <li>Rooms</li>
+                    <li>Kitchen</li>
+                </ul>
+            </div>
+        </section>
     </div>
     <footer>
-      <p>Holberton School</p>
+        <p class="text">Holberton School</p>
     </footer>
-  </body>
+</body>
 </html>
