--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -1,113 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="stylesheet" type="text/css" href="styles/4-common.css">
-    <link rel="stylesheet" type="text/css" href="styles/3-header.css">
-    <link rel="stylesheet" type="text/css" href="styles/3-footer.css">
-    <link rel="stylesheet" type="text/css" href="styles/6-filters.css">
-    <link type="text/css" rel="stylesheet" href="styles/8-places.css">
-    <link rel="icon" href="images/icon.png" />
-    <title>HBnB</title>
-  </head>
-  <body>
+<head>
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <title>AirBnB clone</title>
+    <link rel="stylesheet" href="styles/4-common.css">
+    <link rel="stylesheet" href="styles/3-header.css">
+    <link rel="stylesheet" href="styles/3-footer.css">
+    <link rel="stylesheet" href="styles/6-filters.css">
+    <link rel="stylesheet" href="styles/8-places.css">
+    <link rel="icon" href="images/icon.png">
+</head>
+<body>
     <header>
-      <div class="logo"></div>
+        <div class="logo"></div>
     </header>
     <div class="container">
-      <section class="filters">
-	<div class="locations">
-	  <h3>States</h3>
-	  <h4>California, Arizona</h4>
-	  <div class="popover">
-	    <ul>
-	      <li>
-		<h2>Arizona:</h2>
-		<ul>
-		  <li>Pheonix</li>
-		  <li>Sedona</li>
-		</ul>
-	      </li>
-	      <li>
-		<h2>California:</h2>
-		<ul>
-		  <li>LA</li>
-		  <li>SF</li>
-		</ul>
-	      </li>
-	    </ul>
-	  </div>
-	</div>
-	<div class="amenities">
-	  <h3>Amenities</h3>
-	  <h4>Internet, Kitchen</h4>
-	  <div class="popover">
-	    <ul>
-	      <li>Internet</li>
-	      <li>TV</li>
-	      <li>Kitchen</li>
-	      <li>Iron</li>
-	    </ul>
-	  </div>
-	</div>
-	<button type="button">Search</button>
-      </section>
-      <section class="places">
-	<h1>Places</h1>
-	<article>
-	  <div class="title_box">
-	    <h2>My Home</h2>
-	    <div class="price_by_night">$129</div>
-	  </div>
-	  <div class="information">
-	    <div class="max_guest">6 Guests</div>
-            <div class="number_rooms">4 Bedroom</div>
-            <div class="number_bathrooms">2 Bathroom</div>
-	  </div>
-	  <div class="user">
-            <b>Owner:</b> Kevin Yook
-          </div>
-          <div class="description">
-	    This is my personal house in Korea please stay as much as you want if you come to Korea. Also as a complementary there is a tour guide who will help guide you though Seoul me.
-          </div>
-	</article>
-	<article>
-	  <div class="title_box">
-	    <h2>Tiny House</h2>
-	    <div class="price_by_night">$69</div>
-	  </div>
-	  <div class="information">
-	    <div class="max_guest">3 Guests</div>
-            <div class="number_rooms">1 Bedroom</div>
-            <div class="number_bathrooms">1 Bathroom</div>
-	  </div>
-	  <div class="user">
-            <b>Owner:</b> John Doe
-          </div>
-          <div class="description">
-	    This house is John's personal hideout. It contains blood stained walls as a feature to the luxery blury light.
-          </div>
-	</article>
-	<article>
-	  <div class="title_box">
-	    <h2>A Suite</h2>
-	    <div class="price_by_night">$179</div>
-	  </div>
-	  <div class="information">
-	    <div class="max_guest">4 Guests</div>
-            <div class="number_rooms">4 Bedroom</div>
-            <div class="number_bathrooms">4 Bathroom</div>
-	  </div>
-	  <div class="user">
-            <b>Owner:</b> Bob
-          </div>
-          <div class="description">
-	    This house is a fine suite created by designer bob. Each room has it's own bathrooms
-          </div>
-	</article>
-      </section>
+        <section class="filters">
+            <button>
+                Search
+            </button>
+            <div class="locations">
+                <h3>States</h3>
+                <h4>California, Florida...</h4>
+                <ul class="popover">
+                    <li><h2>Florida:</h2></li>
+                    <li>Miami</li>
+                    <li>Orlando</li>
+                    <li><h2>California:</h2></li>
+                    <li>San Francisco</li>
+                </ul>
+            </div>
+            <div class="amenities">
+                <h3>Amenities</h3>
+                <h4>Internet, Kitchen...</h4>
+                <ul class="popover">
+                    <li>Tv</li>
+                    <li>Rooms</li>
+                    <li>Kitchen</li>
+                </ul>
+            </div>
+        </section>
+        <section class="places">
+            <h1>Places</h1>
+            <article>
+                <h2>My home</h2>
+                <div class="price_by_night">
+                    <p>$80</p>
+                </div>
+                <div class="information">
+                    <div class="max_guest">
+                        <div class="logo_guests"></div>
+                        <p>2 Guests</p>
+                    </div>
+                    <div class="number_rooms">
+                        <div class="logo_rooms"></div>
+                        <p>1 Bedroom</p>
+                    </div>
+                    <div class="number_bathrooms">
+                        <div class="logo_bath"></div>
+                        <p>1 Bathroom</p>
+                    </div>
+                </div>
+                <div class="user">
+                    <p><strong>Owner: </strong>Cristian G</p>
+                </div>
+                <div class="description">
+                    <p>This is a lovely 1 bedroom and 1 bathroom apartment that can accommodate 2 
+                        people. it locates at the center of Shangai and netx to subway line 1,
+                        1 stop to People Square, 2 stop to Bund, 3 stop to jingan Temple
+                    </p>
+                </div>
+            </article>
+            <article>
+                <h2>Tiny house</h2>
+                <div class="price_by_night">
+                    <p>$200</p>
+                </div>
+                <div class="information">
+                    <div class="max_guest">
+                        <div class="logo_guests"></div>
+                        <p>4 Guests</p>
+                    </div>
+                    <div class="number_rooms">
+                        <div class="logo_rooms"></div>
+                        <p>4 Bedroom</p>
+                    </div>
+                    <div class="number_bathrooms">
+                        <div class="logo_bath"></div>
+                        <p>3 Bathroom</p>
+                    </div>
+                </div>
+                <div class="user">
+                    <p><strong>Owner: </strong>Felipe B</p>
+                </div>
+                <div class="description">
+                    <p>This package is special opportunity to connect accommodation in a traditional 
+                        Norwegian cottage located in a birch forest, 
+                        taste the local food, and snowshoeing/hiking experience. 
+                        Polar Cabin is a perfect place for outdoor activities, observing Northern 
+                        Lights in winter or just relaxing, reading books, listening to birds singing and enjoying nature. 
+                        Suitable for couples, families, group of friends or small groups searching for something extraordinary. 
+                        The place is very private, quiet and non-touristic. Breathe the nature of 
+                        Northern Norway and just feel cosy and comfortable, romantic and excited.
+                    </p>
+                </div>
+            </article>
+            <article>
+                <h2>A suite</h2>
+                <div class="price_by_night">
+                    <p>$250</p>
+                </div>
+                <div class="information">
+                    <div class="max_guest">
+                        <div class="logo_guests"></div>
+                        <p>2 Guests</p>
+                    </div>
+                    <div class="number_rooms">
+                        <div class="logo_rooms"></div>
+                        <p>1 Bedroom</p>
+                    </div>
+                    <div class="number_bathrooms">
+                        <div class="logo_bath"></div>
+                        <p>1 Bathroom</p>
+                    </div>
+                </div>
+                <div class="user">
+                    <p><strong>Owner: </strong>Loriem Brau</p>
+                </div>
+                <div class="description">
+                    <p>The room is located right in the heart of la République area, in the 10th district of Paris. 
+                        It’s close to lively streets, transportation and shops, making your stay in Paris easy and enjoyable.
+                        The room is bright, quiet and comfy, which makes it the perfect place to rest after your 
+                        long and exciting days exploring the capital city.
+                    </p>
+                </div>
+            </article>
+        </section>
     </div>
     <footer>
-      <p>Holberton School</p>
+        <p class="text">Holberton School</p>
     </footer>
-  </body>
+</body>
 </html>
